--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <textarea id="in" cols="50" rows="30"></textarea>
     <br/>
     <button id="run">Run</button>
+    <button id="stop">Stop</button>
     <br/>
     <p id="pointer">Pointer: 0</p>
     <p id="runtime">Runtime: 0</p>
